updated links and description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>SreeKaram - For your new beginings</title>
   <meta name="description"
-    content="A free and modern UI toolkit for web makers based on the popular Bootstrap 4 framework.">
+    content="SreeKaram Enterprises is an ISO 22000:2018 certified manufacturer, supplier and exporter
+                                of wide range of products which
+                                include Turmeric powder, Red Chilli powder, Coriander powder, Garam Masala, Sambar
+                                Powder, Grains & Rices, Pluses and
+                                Dry Fruits.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -44,7 +48,7 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="https://www.instagram.com/sreekaram_enterprises/">
             <i class="fa fa-instagram"></i>
           </a>
         </li>
@@ -69,12 +73,12 @@
       <h1 class="slide-in"><img src="images/demo/logo.png" alt="" height="140"></h1>
       <p class="slide-in">For your new beginings</p>
       <div class="action-links slide-in">
-        <a href="https://designrevision.com/downloads/shards" class="btn btn-primary btn-pill align-self-center mr-2">
+        <a href="about.html" class="btn btn-primary btn-pill align-self-center mr-2">
           <i class="fa fa-binoculars mr-1"></i> Learn More</a>
       </div>
     </div>
     <div class="product-by">
-      <a href="https://designrevision.com" target="_blank">
+      <a href="index.html">
         <p>A Product By</p>
         <p>SreeKaram Enterprises</p>
       </a>
@@ -229,18 +233,15 @@
           <p class="text-muted text-center small p-0 mb-4"><img src="images/demo/logo.png" alt="" height="60"></p>
           <p class="text-muted text-center small p-0 mb-4">All rights reserved</p>
           <div class="social d-table mx-auto">
-            <a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://twitter.com/DesignRevision"
+            <a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://fb.com"
               target="_blank">
               <i class="fa fa-facebook"></i>
-              <span class="sr-only">View our Twitter Profile</span>
             </a>
-            <a class="facebook mx-3 h4 d-inline-block text-secondary" href="https://www.facebook.com/designrevision"
+            <a class="facebook mx-3 h4 d-inline-block text-secondary" href="https://www.instagram.com/sreekaram_enterprises/"
               target="_blank">
               <i class="fa fa-instagram"></i>
-              <span class="sr-only">View our Facebook Profile
-                <span>
             </a>
-            <!--<a class="github mx-3 h4 d-inline-block text-secondary" href="https://github.com/designrevision"
+            <!--<a class="github mx-3 h4 d-inline-block text-secondary" href="https://github.com/"
             target="_blank">
             <i class="fa fa-github"></i>
             <span class="sr-only">View our GitHub Profile</span>
