--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <!-- Welcome Section -->
   <div class="welcome d-flex justify-content-center flex-column">
-    <img src="images/3d trans.png" alt="SreeKaram" class="shard">
+    <img src="images/3d-2.png" alt="SreeKaram" class="shard">
     <div class="inner-wrapper mt-auto mb-auto">
       <h1 class="slide-in"><img src="images/demo/logo.png" alt="" height="140"></h1>
       <p class="slide-in">For your new beginings</p>
