--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
   <!-- Welcome Section -->
   <div class="welcome d-flex justify-content-center flex-column">
-    <img src="images/3d-2.png" alt="SreeKaram" class="shard">
     <div class="inner-wrapper mt-auto mb-auto">
-      <h1 class="slide-in"><img src="images/demo/logo.png" alt="" height="140"></h1>
+      <img src="images/skpack.png" alt="SreeKaram" width="420"><br>
+      <img src="images/demo/logo.png" alt="" height="140">
       <p class="slide-in">For your new beginings</p>
       <div class="action-links slide-in">
         <a href="about.html" class="btn btn-primary btn-pill align-self-center mr-2">
@@ -161,9 +161,13 @@
 
           <div class="example col-md-12 ml-auto mr-auto">
             <div class="row">
-              <div class="col-lg-4 col-md-6 col-sm-10 mb-4">
+              <div>
                 <div class="card">
-                  <img class="card-img-top" src="images/demo/sk.png" alt="Card image cap">
+                  <div class="sketchfab-embed-wrapper">
+                    <iframe title="A 3D model" width="360" height="480"
+                      src="https://sketchfab.com/models/e5a65bdf4ca64e43bb34367ebe5180df/embed?autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
+                      frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  </div>
                   <div class="card-body">
                     <h4 class="card-title">Red chilli powder</h4>
                     <p class="card-text">Red Chilli Powder is made of Selected Chillies. Red Chilli Powder is mainly
@@ -173,10 +177,14 @@
                   </div>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-md-6 col-sm-10 mb-4">
+<br>
+              <div>
                 <div class="card">
-                  <img class="card-img-top" src="images/demo/sk.png" alt="Card image cap">
+<div class="sketchfab-embed-wrapper">
+  <iframe title="A 3D model" width="355" height="480"
+    src="https://sketchfab.com/models/e5a65bdf4ca64e43bb34367ebe5180df/embed?autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
+    frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+</div>
                   <div class="card-body">
                     <h4 class="card-title">Turmeric powder</h4>
                     <p class="card-text">Turmeric Powder is prepared from turmeric selected by our experts directly from
@@ -187,10 +195,14 @@
                   </div>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-md-6 col-sm-10 mb-4">
+<br>
+              <div>
                 <div class="card">
-                  <img class="card-img-top" src="images/demo/sk.png" alt="Card image cap">
+<div class="sketchfab-embed-wrapper">
+  <iframe title="A 3D model" width="360" height="480"
+    src="https://sketchfab.com/models/e5a65bdf4ca64e43bb34367ebe5180df/embed?autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
+    frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+</div>
                   <div class="card-body">
                     <h4 class="card-title">Coriander powder</h4>
                     <p class="card-text">Backed by the profound experience of the industry, we have been able to offer
