updated models and image

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <li class="nav-item">
           <a class="nav-link" href="about.html">About Us</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link" href="product.html">Our Products</a>
-        </li>
+        </li>-->
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact Us</a>
         </li>
@@ -69,7 +69,7 @@
   <!-- Welcome Section -->
   <div class="welcome d-flex justify-content-center flex-column">
     <div class="inner-wrapper mt-auto mb-auto">
-      <img src="images/skpack.png" alt="SreeKaram" width="420"><br>
+      <img src="images/product.png" alt="SreeKaram" width="420"><br>
       <img src="images/demo/logo.png" alt="" height="140">
       <p class="slide-in">For your new beginings</p>
       <div class="action-links slide-in">
@@ -164,8 +164,8 @@
               <div>
                 <div class="card">
                   <div class="sketchfab-embed-wrapper">
-                    <iframe title="A 3D model" width="360" height="480"
-                      src="https://sketchfab.com/models/e5a65bdf4ca64e43bb34367ebe5180df/embed?autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
+                    <iframe title="A 3D model" width="370" height="480"
+                      src="https://sketchfab.com/models/2e2eedc522964fb0aac1d6872267a1ec/embed?autospin=0.2&amp;autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
                       frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                   </div>
                   <div class="card-body">
@@ -198,11 +198,12 @@
 <br>
               <div>
                 <div class="card">
-<div class="sketchfab-embed-wrapper">
-  <iframe title="A 3D model" width="360" height="480"
-    src="https://sketchfab.com/models/e5a65bdf4ca64e43bb34367ebe5180df/embed?autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
-    frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-</div>
+            <div class="sketchfab-embed-wrapper">
+              <iframe title="A 3D model" width="370" height="480"
+                src="https://sketchfab.com/models/0755b7b037c4477b83b8151c630bcfc9/embed?autospin=0.2&amp;autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
+                frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>
+
                   <div class="card-body">
                     <h4 class="card-title">Coriander powder</h4>
                     <p class="card-text">Backed by the profound experience of the industry, we have been able to offer
