--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="product.html">Our Products</a>
-                </li>
+                <!--<li class="nav-item">
+                          <a class="nav-link" href="product.html">Our Products</a>
+                        </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
