updated links & models

--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="fa fa-facebook"></i>
+                    <a class="nav-link" href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80">
+                        <i class="fa fa-whatsapp"></i>
                     </a>
                 </li>
             </ul>
@@ -246,18 +246,17 @@
                     <p class="text-muted text-center small p-0 mb-4"><img src="images/demo/logo.png" alt="" height="60"></p>
                     <p class="text-muted text-center small p-0 mb-4">All rights reserved</p>
                     <div class="social d-table mx-auto">
-                        <a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://fb.com" target="_blank">
+                        <!--<a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://fb.com" target="_blank">
                             <i class="fa fa-facebook"></i>
-                        </a>
+                        </a>-->
                         <a class="facebook mx-3 h4 d-inline-block text-secondary"
                             href="https://www.instagram.com/sreekaram_enterprises/" target="_blank">
                             <i class="fa fa-instagram"></i>
                         </a>
-                        <!--<a class="github mx-3 h4 d-inline-block text-secondary" href="https://github.com/"
+                        <a class="github mx-3 h4 d-inline-block text-secondary" href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80"
                             target="_blank">
-                            <i class="fa fa-github"></i>
-                            <span class="sr-only">View our GitHub Profile</span>
-                          </a>-->
+                            <i class="fa fa-whatsapp"></i>
+                          </a>
                     </div>
                     <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <img src="images/quadato.png" alt=""
                             height="50"></p>
