--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>SreeKaram - For your new beginings</title>
-  <meta name="description"
-    content="SreeKaram Enterprises is an ISO 22000:2018 certified manufacturer, supplier and exporter
+  <meta name="description" content="SreeKaram Enterprises is an ISO 22000:2018 certified manufacturer, supplier and exporter
                                 of wide range of products which
                                 include Turmeric powder, Red Chilli powder, Coriander powder, Garam Masala, Sambar
                                 Powder, Grains & Rices, Pluses and
@@ -54,8 +53,8 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="fa fa-facebook"></i>
+          <a class="nav-link" href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80">
+            <i class="fa fa-whatsapp"></i>
           </a>
         </li>
       </ul>
@@ -166,50 +165,54 @@
                   <div class="sketchfab-embed-wrapper">
                     <iframe title="A 3D model" width="370" height="480"
                       src="https://sketchfab.com/models/2e2eedc522964fb0aac1d6872267a1ec/embed?autospin=0.2&amp;autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
-                      frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                      frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true"
+                      webkitallowfullscreen="true"></iframe>
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">Red chilli powder</h4>
                     <p class="card-text">Red Chilli Powder is made of Selected Chillies. Red Chilli Powder is mainly
                       used in cooking purpose. We supply Natural
                       Chilli Powder with High grade , High Quality, Best Color, Best Flavor, Taste Enhancer</p>
-                    <a href="#" class="btn btn-primary">Read More</a>
+                    <a href="contact.html" class="btn btn-primary">Read More</a>
                   </div>
                 </div>
               </div>
-<br><br><br><br>
+              <br><br><br>
               <div>
                 <div class="card">
-<div class="sketchfab-embed-wrapper">
-  <iframe title="A 3D model" width="355" height="480"
-    src="https://sketchfab.com/models/e5a65bdf4ca64e43bb34367ebe5180df/embed?autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
-    frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-</div>
+                  <div class="sketchfab-embed-wrapper">
+                    <iframe title="A 3D model" width="370" height="480"
+                      src="https://sketchfab.com/models/81bc6e8519da4d449328d05f0c4e0644/embed?autospin=0.2&amp;autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
+                      frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  </div>
+
+
                   <div class="card-body">
                     <h4 class="card-title">Turmeric powder</h4>
                     <p class="card-text">Turmeric Powder is prepared from turmeric selected by our experts directly from
                       the farmers. The turmeric is selected in
                       the traditional way that it has to be crisp, sun-dried, free of impurities and golden in colour
                     </p>
-                    <a href="#" class="btn btn-primary">Read More</a>
+                    <a href="contact.html" class="btn btn-primary">Read More</a>
                   </div>
                 </div>
               </div>
-<br><br><br><br>
+              <br><br><br>
               <div>
                 <div class="card">
-            <div class="sketchfab-embed-wrapper">
-              <iframe title="A 3D model" width="370" height="480"
-                src="https://sketchfab.com/models/0755b7b037c4477b83b8151c630bcfc9/embed?autospin=0.2&amp;autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
-                frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            </div>
+                  <div class="sketchfab-embed-wrapper">
+                    <iframe title="A 3D model" width="370" height="480"
+                      src="https://sketchfab.com/models/0755b7b037c4477b83b8151c630bcfc9/embed?autospin=0.2&amp;autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
+                      frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true"
+                      webkitallowfullscreen="true"></iframe>
+                  </div>
 
                   <div class="card-body">
                     <h4 class="card-title">Coriander powder</h4>
                     <p class="card-text">Backed by the profound experience of the industry, we have been able to offer
                       quality range of Coriander seeds and
                       crushed them into fine powder.</p>
-                    <a href="#" class="btn btn-primary">Read More</a>
+                    <a href="contact.html" class="btn btn-primary">Read More</a>
                   </div>
                 </div>
               </div>
@@ -246,19 +249,16 @@
           <p class="text-muted text-center small p-0 mb-4"><img src="images/demo/logo.png" alt="" height="60"></p>
           <p class="text-muted text-center small p-0 mb-4">All rights reserved</p>
           <div class="social d-table mx-auto">
-            <a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://fb.com"
-              target="_blank">
+            <!--<a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://fb.com" target="_blank">
               <i class="fa fa-facebook"></i>
-            </a>
-            <a class="facebook mx-3 h4 d-inline-block text-secondary" href="https://www.instagram.com/sreekaram_enterprises/"
-              target="_blank">
+            </a>-->
+            <a class="facebook mx-3 h4 d-inline-block text-secondary"
+              href="https://www.instagram.com/sreekaram_enterprises/" target="_blank">
               <i class="fa fa-instagram"></i>
             </a>
-            <!--<a class="github mx-3 h4 d-inline-block text-secondary" href="https://github.com/"
-            target="_blank">
-            <i class="fa fa-github"></i>
-            <span class="sr-only">View our GitHub Profile</span>
-          </a>-->
+            <a class="github mx-3 h4 d-inline-block text-secondary" href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80" target="_blank">
+              <i class="fa fa-whatsapp"></i>
+            </a>
           </div>
           <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <img src="images/quadato.png"
               alt="" height="50"></p>
