final changes by client

--- a/about.html
+++ b/about.html
@@ -25,44 +25,51 @@
         <div class="page-loader"><img src="images/quadato.png" alt="" height="50"></div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <img src="images/demo/logo.png" alt="Example Navbar 1" class="mr-2" height="60">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-7"
-            aria-controls="navbarNavDropdown-7" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown-7">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                </li>
-                <!--<li class="nav-item">
-                          <a class="nav-link" href="product.html">Our Products</a>
-                        </li>-->
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
-                
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="https://www.instagram.com/sreekaram_enterprises/">
-                        <i class="fa fa-instagram"></i>
-                    </a>
-                </li>
+    <img src="images/demo/logo.png" alt="Example Navbar 1" class="mr-2" height="60">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-7"
+      aria-controls="navbarNavDropdown-7" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown-7">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html" style="color: rgb(143, 10, 10);">Home</a> <!---->
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html" style="color: rgb(143, 10, 10);">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="gallery.html" style="color: rgb(143, 10, 10);">Gallery</a>
+        </li>
+        <!--<li class="nav-item">
+          <a class="nav-link" href="product.html" style="color: rgb(143, 10, 10);">Our Products</a>
+        </li>-->
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html" style="color: rgb(143, 10, 10);">Contact Us</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.instagram.com/sreekaram_enterprises/">
+            <img src="images/insta.png" alt="" width="16">
+          </a>
+        </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80">
-                        <i class="fa fa-whatsapp"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        <li class="nav-item">
+          <a class="nav-link" href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80">
+            <img src="images/whatsapp.png" alt="" width="16">
+          </a>
+        </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.facebook.com/SreeKaramEnterprises/">
+            <img src="images/facebook.png" alt="" width="16">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 
     <!-- Floating Shards -->
@@ -83,7 +90,7 @@
                 <div class="row">
                     <div class="example col-md-12 ml-auto mr-auto">
                         <div class="color">
-                            <h3 class="mb-4"><i class="fa fa-road"></i>About Us</h3>
+                            <h3 class="mb-4" style="color: rgb(129, 15, 15);"><i class="fa fa-road"></i>About Us</h3>
                             <p>SreeKaram Enterprises is an ISO 22000:2018 certified manufacturer, supplier and exporter
                                 of wide range of products which
                                 include Turmeric powder, Red Chilli powder, Coriander powder, Garam Masala, Sambar
@@ -102,7 +109,7 @@
                 <!-- Typography -->
                 <div id="typography" class="container mb-5">
                     <div class="example col-md-12 ml-auto mr-auto">
-                        <h3 class="mb-4"><i class="fa fa-rocket"></i> Our Vision</h3>
+                        <h3 class="mb-4" style="color: rgb(16, 183, 212);"><i class="fa fa-rocket"></i> Our Vision</h3>
                         <p align="justify">Our Vision is to be the preferred supplier of grounded spices and pulses to
                             our discerning clients by maintaining the
                             highest standards of quality and creating products that satisfy our customers.
@@ -113,7 +120,7 @@
                 <div class="row">
                     <div class="example col-md-12 ml-auto mr-auto">
                         <div class="color">
-                            <h3 class="mb-4"><i class="fa fa-bullseye"></i> Our Mission</h3>
+                            <h3 class="mb-4" style="color: rgb(150, 16, 212);"><i class="fa fa-bullseye"></i> Our Mission</h3>
                             <p align="justify">To serve our customers, partners and associates through innovative,
                                 reliable, value for money and efficient equipment
                                 trading and associated services; rendered with speed, transparency, reliability with
@@ -128,7 +135,7 @@
 
                 <div id="typography" class="container mb-5">
                     <div class="example col-md-12 ml-auto mr-auto">
-                        <h3 class="mb-4"><i class="fa fa-trophy"></i> Our Core Values</h3>
+                        <h3 class="mb-4" style="color: rgb(145, 155, 15);"><i class="fa fa-trophy"></i> Our Core Values</h3>
                         <p align="justify">We are based on our Seven value system:
                         <ul>
                             <li>Customers are our guiding force: Our performance is gauged by your feedback, demands and
@@ -152,7 +159,7 @@
                 <div class="row">
                     <div class="example col-md-12 ml-auto mr-auto">
                         <div class="color">
-                            <h3 class="mb-4"><i class="fa fa-handshake-o"></i> Our Partners</h3>
+                            <h3 class="mb-4" style="color: rgb(212, 88, 16);"><i class="fa fa-handshake-o"></i> Our Partners</h3>
                             <p align="justify">Our perseverance towards quality and business ethics from the last 2
                                 years has earned us a trustworthy position in the
                                 market. It has been certified by Trade license, ISO, Food license, Labour License. Owing
@@ -166,7 +173,7 @@
 
                 <div id="typography" class="container mb-5">
                     <div class="example col-md-12 ml-auto mr-auto">
-                        <h3 class="mb-4"><i class="fa fa-life-bouy"></i> Quality Compliance</h3>
+                        <h3 class="mb-4" style="color: rgb(29, 16, 212);"><i class="fa fa-life-bouy"></i> Quality Compliance</h3>
                         <p align="justify">
                         <ul>
                             <li>We maintain uniform standards, our experts consistently supervise every activity and
@@ -186,7 +193,7 @@
                 <div class="row">
                     <div class="example col-md-12 ml-auto mr-auto">
                         <div class="color">
-                            <h3 class="mb-4"><i class="fa fa-magic"></i> Quality Assurance</h3>
+                            <h3 class="mb-4" style="color: rgb(33, 212, 16);"><i class="fa fa-magic"></i> Quality Assurance</h3>
                             <p align="justify">Being a quality conscious organization, we make sure to deliver only high
                                 quality products which are safe & hygienic for
                                 our Consumers. We are totally committed to meet the expectation of our clients by
@@ -203,7 +210,7 @@
 
                 <div id="typography" class="container mb-5">
                     <div class="example col-md-12 ml-auto mr-auto">
-                        <h3 class="mb-4"><i class="fa fa-smile-o"></i> Customer Delight</h3>
+                        <h3 class="mb-4" style="color: rgb(219, 119, 37);"><i class="fa fa-smile-o"></i> Customer Delight</h3>
                         <p align="justify">
                             A company that wants to be successful and profitable always focused on meeting customer
                             requirements. At SreeKaram
@@ -246,17 +253,18 @@
                     <p class="text-muted text-center small p-0 mb-4"><img src="images/demo/logo.png" alt="" height="60"></p>
                     <p class="text-muted text-center small p-0 mb-4">All rights reserved</p>
                     <div class="social d-table mx-auto">
-                        <!--<a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://fb.com" target="_blank">
-                            <i class="fa fa-facebook"></i>
-                        </a>-->
                         <a class="facebook mx-3 h4 d-inline-block text-secondary"
                             href="https://www.instagram.com/sreekaram_enterprises/" target="_blank">
-                            <i class="fa fa-instagram"></i>
+                            <img src="images/insta.png" alt="" width="18">
                         </a>
-                        <a class="github mx-3 h4 d-inline-block text-secondary" href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80"
+                        <a class="github mx-3 h4 d-inline-block text-secondary"
+                            href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80" target="_blank">
+                            <img src="images/whatsapp.png" alt="" width="18">
+                        </a>
+                        <a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://www.facebook.com/SreeKaramEnterprises/"
                             target="_blank">
-                            <i class="fa fa-whatsapp"></i>
-                          </a>
+                            <img src="images/facebook.png" alt="" width="18">
+                        </a>
                     </div>
                     <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <img src="images/quadato.png" alt=""
                             height="50"></p>
