--- a/gallery.html
+++ b/gallery.html
@@ -72,12 +72,26 @@
         </div>
     </nav>
 
-
     <!-- Page Content -->
     <div class="page-content">
         <!-- Content -->
 
+        <div id="cards" class="container mb-2" style="padding-bottom: 1px">
+            <div class="example col-md-12 ml-auto mr-auto">
+                <h3 class="mb-4">Our Facebook Feed</h3>
+            </div>
 
+            <div class="example col-md-12 ml-auto mr-auto">
+                <div class="row">
+                    <iframe
+                        src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSreeKaramEnterprises%2F&tabs=timeline&width=340&height=1400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                        width="340" height="1400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
+                        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
+                </div>
+            </div>
+        </div>
+<br><br>
         <div id="badges" class="container">
             <div class="example col-md-12 ml-auto mr-auto">
                 <h3 class="mb-4">Contact Us</h3>
@@ -104,18 +118,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="example col-md-12 ml-auto mr-auto">
-                <div class="color">
-                    <br><iframe
-                        src="https://docs.google.com/forms/d/e/1FAIpQLSehYi2c4GPToaqgLPe8pJJ8XCPZUJDVfL9vWgDR_osiYqGIXA/viewform?embedded=true"
-                        width="450" height="1105" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                </div>
-            </div>
-        </div>
-
-
         <footer class="main-footer py-5">
             <p class="text-muted text-center small p-0 mb-4"><img src="images/demo/logo.png" alt="" height="60"></p>
             <p class="text-muted text-center small p-0 mb-4">All rights reserved</p>
