--- a/product.html
+++ b/product.html
@@ -34,28 +34,38 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown-7">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html" style="color: rgb(143, 10, 10);">Home</a>
+                    <!---->
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About Us</a>
+                    <a class="nav-link" href="about.html" style="color: rgb(143, 10, 10);">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="product.html">Our Products</a>
+                    <a class="nav-link" href="gallery.html" style="color: rgb(143, 10, 10);">Gallery</a>
                 </li>
+                <!--<li class="nav-item">
+              <a class="nav-link" href="product.html" style="color: rgb(143, 10, 10);">Our Products</a>
+            </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
+                    <a class="nav-link" href="contact.html" style="color: rgb(143, 10, 10);">Contact Us</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.instagram.com/sreekaram_enterprises/">
-                        <i class="fa fa-instagram"></i>
+                        <img src="images/insta.png" alt="" width="16">
                     </a>
                 </li>
-
+    
                 <li class="nav-item">
                     <a class="nav-link" href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80">
-                        <i class="fa fa-whatsapp"></i>
+                        <img src="images/whatsapp.png" alt="" width="16">
+                    </a>
+                </li>
+    
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.facebook.com/SreeKaramEnterprises/">
+                        <img src="images/facebook.png" alt="" width="16">
                     </a>
                 </li>
             </ul>
@@ -214,17 +224,18 @@
             <p class="text-muted text-center small p-0 mb-4"><img src="images/demo/logo.png" alt="" height="60"></p>
             <p class="text-muted text-center small p-0 mb-4">All rights reserved</p>
             <div class="social d-table mx-auto">
-                <!--<a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://fb.com" target="_blank">
-                    <i class="fa fa-facebook"></i>
-                </a>-->
                 <a class="facebook mx-3 h4 d-inline-block text-secondary"
                     href="https://www.instagram.com/sreekaram_enterprises/" target="_blank">
-                    <i class="fa fa-instagram"></i>
+                    <img src="images/insta.png" alt="" width="18">
                 </a>
-                <a class="github mx-3 h4 d-inline-block text-secondary" href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80"
+                <a class="github mx-3 h4 d-inline-block text-secondary"
+                    href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80" target="_blank">
+                    <img src="images/whatsapp.png" alt="" width="18">
+                </a>
+                <a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://www.facebook.com/SreeKaramEnterprises/"
                     target="_blank">
-                    <i class="fa fa-whatsapp"></i>
-                  </a>
+                    <img src="images/facebook.png" alt="" width="18">
+                </a>
             </div>
             <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <img src="images/quadato.png" alt=""
                     height="50"></p>
