updated changes by cliebnt

--- a/product.html
+++ b/product.html
@@ -34,20 +34,24 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown-7">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html" style="color: rgb(143, 10, 10);">Home</a>
+                    <a class="nav-link" href="index.html"><button type="button"
+                            class="btn btn-outline-danger btn-pill">Home</button></a>
                     <!---->
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html" style="color: rgb(143, 10, 10);">About Us</a>
+                    <a class="nav-link" href="about.html"><button type="button"
+                            class="btn btn-outline-danger btn-pill">About Us</button></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="gallery.html" style="color: rgb(143, 10, 10);">Gallery</a>
+                    <a class="nav-link" href="gallery.html"><button type="button"
+                            class="btn btn-outline-danger btn-pill">Gallery</button></a>
                 </li>
                 <!--<li class="nav-item">
-              <a class="nav-link" href="product.html" style="color: rgb(143, 10, 10);">Our Products</a>
+              <a class="nav-link" href="product.html"><button type="button" class="btn btn-outline-danger btn-pill">Our Products</button></a>
             </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html" style="color: rgb(143, 10, 10);">Contact Us</a>
+                    <a class="nav-link" href="contact.html"><button type="button"
+                            class="btn btn-outline-danger btn-pill">Contact Us</button></a>
                 </li>
             </ul>
             <ul class="navbar-nav">
@@ -66,6 +70,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="https://www.facebook.com/SreeKaramEnterprises/">
                         <img src="images/facebook.png" alt="" width="16">
+                    </a>
+                </li>
+    
+                <li class="nav-item">
+                    <a class="nav-link" href="https://twitter.com/SreekaramE?s=20">
+                        <img src="images/twitter.png" alt="" width="16">
                     </a>
                 </li>
             </ul>
@@ -235,6 +245,10 @@
                 <a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://www.facebook.com/SreeKaramEnterprises/"
                     target="_blank">
                     <img src="images/facebook.png" alt="" width="18">
+                </a>
+                <a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://twitter.com/SreekaramE?s=20"
+                    target="_blank">
+                    <img src="images/twitter.png" alt="" width="18">
                 </a>
             </div>
             <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <img src="images/quadato.png" alt=""
