--- a/index.html
+++ b/index.html
@@ -178,10 +178,8 @@
               <div>
                 <div class="card">
                   <div class="sketchfab-embed-wrapper">
-                    <iframe title="A 3D model" width="370" height="480"
-                      src="https://sketchfab.com/models/2e2eedc522964fb0aac1d6872267a1ec/embed?autospin=0.2&amp;autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
-                      frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true"
-                      webkitallowfullscreen="true"></iframe>
+                    <iframe allowfullscreen webkitallowfullscreen width="400" height="480" frameborder="5" seamless
+                      src="https://p3d.in/e/4xryb+spin+load"></iframe>
                   </div>
                   <div class="card-body">
                     <h4 class="card-title">Red chilli powder</h4>
@@ -196,9 +194,8 @@
               <div>
                 <div class="card">
                   <div class="sketchfab-embed-wrapper">
-                    <iframe title="A 3D model" width="370" height="480"
-                      src="https://sketchfab.com/models/81bc6e8519da4d449328d05f0c4e0644/embed?autospin=0.2&amp;autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
-                      frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                    <iframe allowfullscreen webkitallowfullscreen width="400" height="480" frameborder="2" seamless
+                      src="https://p3d.in/e/4bRG4+spin+load"></iframe>
                   </div>
 
 
@@ -216,10 +213,8 @@
               <div>
                 <div class="card">
                   <div class="sketchfab-embed-wrapper">
-                    <iframe title="A 3D model" width="370" height="480"
-                      src="https://sketchfab.com/models/0755b7b037c4477b83b8151c630bcfc9/embed?autospin=0.2&amp;autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
-                      frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true"
-                      webkitallowfullscreen="true"></iframe>
+                    <iframe allowfullscreen webkitallowfullscreen width="400" height="480" frameborder="0" seamless
+                      src="https://p3d.in/e/Hw1nC+spin+load"></iframe>
                   </div>
 
                   <div class="card-body">
@@ -280,7 +275,7 @@
               <img src="images/twitter.png" alt="" width="18">
             </a>
           </div>
-          <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <img src="images/quadato.png"
+          <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <img src="images/quadato1.png"
               alt="" height="50"></p>
 
         </footer>
