--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <div class="page-loader"><img src="images/quadato.png" alt="" height="50"></div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <img src="images/demo/logo.png" alt="Example Navbar 1" class="mr-2" height="60">
+    <a href="index.html"><img src="images/demo/logo.png" alt="Example Navbar 1" class="mr-2" height="60"></a>
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-7"
             aria-controls="navbarNavDropdown-7" aria-expanded="false" aria-label="Toggle navigation">
@@ -314,7 +314,7 @@
                             <img src="images/twitter.png" alt="" width="18">
                         </a>
                     </div>
-                    <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <img src="images/quadato.png" alt=""
+                    <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <img src="images/quadato1.png" alt=""
                             height="50"></p>
                 
                 </footer>
