--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="page-loader"><img src="images/quadato.png" alt="" height="50"></div>
   </div>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <img src="images/demo/logo.png" alt="Example Navbar 1" class="mr-2" height="60">
+    <a href="index.html"><img src="images/demo/logo.png" alt="Example Navbar 1" class="mr-2" height="60"></a>
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown-7"
       aria-controls="navbarNavDropdown-7" aria-expanded="false" aria-label="Toggle navigation">
